--- a/app/auth/templates/login.html
+++ b/app/auth/templates/login.html
@@ -1,49 +1,53 @@
 {% extends "base.html" %}
-{% block content %}
+{% block app_content %}
+<main id="content" role="main">
+    <!-- Login Form -->
+    <div class="container space-2">
+      <form class="js-validate w-md-75 w-lg-50 mx-md-auto" method='post' novalidate="novalidate">
+        {{ form.hidden_tag() }}
+        <!-- Title -->
+        <div class="mb-7">
+          <h2 class="h3 text-primary font-weight-normal mb-0">Welcome <span class="font-weight-semi-bold">back</span></h2>
+          <p>Login to manage your account.</p>
+        </div>
+        <!-- End Title -->
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css')}}">
-<div class="container">
-  <div class="row"><br></div>
-<div class="form-group col-md-6">
- <h3 class="login-heading mb-4">{{ _("Welcome back!")}}</h3>
+        <!-- Form Group -->
+        <div class="js-form-message form-group">
+          <label class="form-label" for="signinSrEmail">Email address</label>
+          {{ form.email(type='email', class='form-control', id='signinSrEmail',
+          **{'placeholder':'Email address', 'aria-label':'Email address', 'data-msg':"Please enter a valid email address", 'data-error-class':'u-has-error', 'data-success-class':'u-has-success'})}}
+        </div>
+        <!-- End Form Group -->
 
-<form class="form form-horizontal" method="post" role="form">
-  <div class="form-label-group">
-  {{ form.hidden_tag() }}
-  {{ form.username(autofocus=true) }}
-  </div>
-  <div class="form-label-group">
-  {{ form.password(autofocus=true) }}
-  </div>
-  <div class="custom-control custom-checkbox mb-3">
-  {{ form.remember_me }}
-  </div>
-{{ form.submit }}
+        <!-- Form Group -->
+        <div class="js-form-message form-group">
+          <label class="form-label" for="signinSrPassword">
+            <span class="d-flex justify-content-between align-items-center">
+              Password
+              <a class="link-muted text-capitalize font-weight-normal" href="recover-account-simple.html">Forgot Password?</a>
+            </span>
+          </label>
+          {{ form.password(type='password', class='form-control', id='signinSrPassword', **{
+            'placeholder': '********', 'aria-label': '********', 'data-msg': 'Your password is invalid. Please try again', 'data-error-class': 'u-has-error', 'data-success-class': 'u-has-success'
+          })}}
+        </div>
+        <!-- End Form Group -->
 
-<div class="text-center">
-<a class="small" href="#">Forgot password?</a>
-</div>
+        <!-- Button -->
+        <div class="row align-items-center mb-5">
+          <div class="col-6">
+            <span class="small text-muted">Don't have an account?</span>
+            <a class="small" href="{{ url_for('auth.start_registration')}}">Signup</a>
+          </div>
 
-</form>
-<!--
-<h4> Or, coming soon... </h4>
-<a class="btn btn-sm btn-social btn-linkedin">
-  <span class="fa fa-linkedin"></span> Sign in with LinkedIn
-</a>
-<br>
-<br>
-<a class="btn btn-sm btn-social btn-github">
-  <span class="fa fa-github"></span>Sign in with Github
-</a>
-</div>
--->
-<!--
-<!-- <h4> Or alternatively, </h4>
-
-<h4><a href="{{ url_for('auth.login_with_github')}}"><img src='/static/github.png' width='275' height='55'></a></h4>
-<h4><a href="{{ url_for('auth.login_with_linkedin') }}"><img src='/static/Signin-with-LinkedIn.png' width='275' height='55'></a></h4><br> -->
-<div class="row"><br></div>
-<p>{{ _('Not already a user?')}}
-  <a href="{{ url_for('auth.start_registration') }}"> {{_('Register here!')}}</a></p>
-</div>
+          <div class="col-6 text-right">
+            <button type="submit" class="btn btn-primary transition-3d-hover">Get Started</button>
+          </div>
+        </div>
+        <!-- End Button -->
+      </form>
+    </div>
+    <!-- End Login Form -->
+  </main>
 {% endblock %}
