--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='front/assets/vendor/font-awesome/css/fontawesome-all.min.css')}}">
 <!--Tags Input -->
   <link rel="stylesheet" href="{{ url_for('static', filename='front/assets/vendor/bootstrap-tagsinput/css/bootstrap-tagsinput.css')}}">
+<!--Range Slider -->
+<link rel="stylesheet" href="{{ url_for('static', filename='front/assets/vendor/ion-rangeslider/css/ion.rangeSlider.css') }}">
 
   <!-- Mobile responsive -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -65,7 +67,7 @@
 
             <!-- Link -->
               <li class="nav-item u-header__nav-item">
-                <a class="nav-link u-header__nav-link" href="#">Discover freelancers</a>
+                <a class="nav-link u-header__nav-link" href=" {{ url_for('main.freelancers_available')}}">Discover freelancers</a>
               </li>
             <!-- End Link -->
 
@@ -227,6 +229,228 @@
 {% block app_content %}{% endblock app_content %}
 {% endblock content %}
 
+{% block footer %}
+<footer class="gradient-half-primary-v4">
+    <div class="container">
+      <!-- CTA -->
+      <div class="row justify-content-lg-between align-items-md-center space-2">
+        <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
+          <h3 class="text-white font-weight-medium mb-1">Ready to get started?</h3>
+          <p class="text-white-70 mb-0">Create your account and earn your shares.</p>
+        </div>
+
+        <div class="col-md-6 col-lg-5 text-md-right">
+          <a class="btn btn-success btn-wide transition-3d-hover mb-1 mb-sm-0 mr-sm-1" href="../pages/signup-simple.html">Sign Up</a>
+          <a class="btn text-primary btn-white btn-wide transition-3d-hover mb-1 mb-sm-0" href="#">Learn More</a>
+        </div>
+      </div>
+      <!-- End CTA -->
+
+      <hr class="opacity-md my-0">
+
+      <div class="row justify-content-md-between space-2">
+        <div class="col-6 col-sm-4 col-lg-2 order-lg-2 mb-7 mb-lg-0">
+          <h4 class="h6 text-white">Account</h4>
+
+          <!-- List Group -->
+          <ul class="list-group list-group-transparent list-group-white list-group-flush list-group-borderless mb-0">
+            <li><a class="list-group-item list-group-item-action" href="../account/dashboard.html">Account</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../account/my-tasks.html">My tasks</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../account/projects.html">Projects</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../account/invite-friends.html">Invite friends</a></li>
+          </ul>
+          <!-- End List Group -->
+        </div>
+
+        <div class="col-6 col-sm-4 col-lg-2 order-lg-3 mb-7 mb-lg-0">
+          <h4 class="h6 text-white">Company</h4>
+
+          <!-- List Group -->
+          <ul class="list-group list-group-transparent list-group-white list-group-flush list-group-borderless mb-0">
+            <li><a class="list-group-item list-group-item-action" href="../pages/about-agency.html">About</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../pages/services-agency.html">Services</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../pages/careers.html">Careers</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../blog/grid-right-sidebar.html">Blog</a></li>
+          </ul>
+          <!-- End List Group -->
+        </div>
+
+        <div class="col-sm-4 col-lg-2 order-lg-4 mb-7 mb-lg-0">
+          <h4 class="h6 text-white">Resources</h4>
+
+          <!-- List Group -->
+          <ul class="list-group list-group-transparent list-group-white list-group-flush list-group-borderless mb-0">
+            <li><a class="list-group-item list-group-item-action" href="../pages/contacts-agency.html">Contacts</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../pages/help.html">Help</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../pages/terms.html">Terms</a></li>
+            <li><a class="list-group-item list-group-item-action" href="../pages/privacy.html">Privacy</a></li>
+          </ul>
+          <!-- End List Group -->
+        </div>
+
+        <div class="col-sm-6 col-md-5 col-lg-3 order-lg-5 mb-6 mb-sm-0">
+          <h4 class="h6 text-white">Events</h4>
+
+          <!-- Events Group -->
+          <ul class="list-unstyled mt-3 mb-0">
+            <li class="mb-3">
+              <a class="d-block bg-primary text-white shadow-primary-lg rounded-pill p-1" href="#">
+                <div class="media align-items-center">
+                  <span class="btn btn-xs btn-soft-white btn-pill mr-2">23/05</span>
+                  <div class="media-body">
+                    <span class="font-size-1">Technical Hiring</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="mb-3">
+              <a class="d-block bg-primary text-white shadow-primary-lg rounded-pill p-1" href="#">
+                <div class="media align-items-center">
+                  <span class="btn btn-xs btn-soft-white btn-pill mr-2">01/06</span>
+                  <div class="media-body">
+                    <span class="font-size-1">Networking Event</span>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+          <!-- End Events -->
+        </div>
+
+        <div class="col-sm-6 col-md-5 col-lg-3 order-lg-1">
+          <div class="d-inline-flex align-self-start flex-column h-100">
+            <!-- Logo -->
+            <a class="d-flex align-items-center mb-3" href="../home/index.html" aria-label="Front">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="36px" height="36px" viewBox="0 0 46 46" xml:space="preserve" style="margin-bottom: 0;">
+                <path fill="#E1E4EA" opacity=".65" d="M23,41.1L23,41.1c-9.9,0-18-8-18-18l0,0c0-9.9,8-18,18-18h11.3c3.7,0,6.6,3,6.6,6.6v11.4C41,33,32.9,41.1,23,41.1z"></path>
+                <path class="fill-white" opacity=".5" d="M28,36L28,36c-9.9,0-18-8-18-18l0,0c0-9.9,8-18,18-18h11.3C43,0.1,46,3.1,46,6.7v11.4C46,28,38,36,28,36z"></path>
+                <path class="fill-white" opacity=".7" d="M18,46.1L18,46.1c-10,0-18-8-18-18l0,0c0-9.9,8-18,18-18h11.3c3.7,0,6.6,3,6.6,6.6v11.4C35.9,38.1,27.9,46.1,18,46.1z"></path>
+                <path class="fill-primary" d="M17.4,34.1V18.4h10.2v2.9h-6.4v3.4H26v2.9h-4.8v6.5H17.4z"></path>
+              </svg>
+              <span class="brand brand-light">Freeline</span>
+            </a>
+            <!-- End Logo -->
+
+            <!-- Country -->
+            <div class="position-relative">
+              <a id="footerCountryInvoker" class="dropdown-nav-link text-white-70" href="javascript:;" role="button" aria-controls="footer-country" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" data-unfold-event="click" data-unfold-target="#footer-country" data-unfold-type="css-animation" data-unfold-duration="300" data-unfold-delay="300" data-unfold-hide-on-scroll="false" data-unfold-animation-in="slideInUp" data-unfold-animation-out="fadeOut">
+                <img class="dropdown-item-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/us.svg')}}" alt="United States Flag">
+                <span class="font-weight-semi-bold">United States</span>
+              </a>
+
+              <div id="footer-country" class="dropdown-menu dropdown-unfold dropdown-card dropdown-menu-bottom u-unfold--css-animation u-unfold--hidden" aria-labelledby="footerCountryInvoker" style="animation-duration: 300ms;">
+                <div class="card">
+                  <!-- Body -->
+                  <div class="card-body list-group list-group-flush list-group-borderless p-5">
+                    <h4 class="h6 font-weight-semi-bold">Front available in</h4>
+
+                    <div class="row">
+                      <div class="col-6">
+                        <!-- List Group -->
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/au.svg')}}" alt="Australia Flag">
+                          Australia
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/at.svg')}}" alt="Austria Flag">
+                          Austria
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/be.svg')}}" alt="Belgium Flag">
+                          Belgium
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/ca.svg')}}" alt="Canada Flag">
+                          Canada
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/dk.svg')}}" alt="Denmark Flag">
+                          Denmark
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/fi.svg')}}" alt="Finland Flag">
+                          Finland
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/fr.svg')}}" alt="France Flag">
+                          France
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/de.svg')}}" alt="Germany Flag">
+                          Germany
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="{{ url_for('static', filename='front/assets/vendor/flag-icon-css/flags/4x3/nl.svg')}}" alt="Netherlands Flag">
+                          Netherlands
+                        </a>
+                        <!-- End List Group -->
+                      </div>
+
+                      <div class="col-6">
+                        <!-- List Group -->
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/nz.svg" alt="New Zealand Flag">
+                          New Zealand
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/no.svg" alt="Norway Flag">
+                          Norway
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/pt.svg" alt="PortugalPREVIEW Flag">
+                          Portugal
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/sg.svg" alt="Singapore Flag">
+                          Singapore
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/es.svg" alt="Spain Flag">
+                          Spain
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/se.svg" alt="Sweden Flag">
+                          Sweden
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/ch.svg" alt="Switzerland Flag">
+                          Switzerland
+                        </a>
+                        <a class="list-group-item list-group-item-action" href="#">
+                          <img class="list-group-icon" src="../../assets/vendor/flag-icon-css/flags/4x3/gb.svg" alt="United Kingdom Flag">
+                          UK
+                        </a>
+                        <a class="list-group-item list-group-item-action active " href="#">
+                          <img class="list-group-icon" src="static/front/assets/vendor/flag-icon-css/flags/4x3/us.svg" alt="United States Flag">
+                          US
+                        </a>
+                        <!-- End List Group -->
+                      </div>
+                    </div>
+                  </div>
+                  <!-- End Body -->
+
+                  <!-- Footer -->
+                  <a class="card-footer card-bg-light p-5" href="#">
+                    <span class="d-block text-muted mb-1">More countries coming soon.</span>
+                    <small class="d-block">Signup to get notified <span class="fas fa-arrow-right small"></span></small>
+                  </a>
+                  <!-- End Footer -->
+                </div>
+              </div>
+            </div>
+            <!-- End Country -->
+
+            <!-- Copyright -->
+            <p class="small text-white-70 mt-lg-auto mb-0">© Freeline. 2019</p>
+            <!-- End Copyright -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+{% endblock footer %}
+
 {% block global_js %}
 <!-- JS Global Compulsory -->
 <script src="{{ url_for('static', filename='front/assets/vendor/jquery/dist/jquery.min.js')}}"></script>
@@ -249,8 +473,8 @@
 <script src="{{ url_for('static', filename='front/assets/vendor/pwstrength-bootstrap/dist/pwstrength-bootstrap.min.js')}}"></script>
 <script src="{{ url_for('static', filename='front/assets/js/components/hs.password-strength.js')}}"></script>
 <script src="{{ url_for('static', filename='front/assets/vendor/bootstrap-tagsinput/js/bootstrap-tagsinput.min.js')}}"></script>
-
-</script>
+<script src="{{ url_for('static', filename='front/assets/vendor/ion-rangeslider/js/ion.rangeSlider.min.js')}}"></script>
+<script src="{{ url_for('static', filename='front/assets/vendor/typed.js/lib/typed.min.js')}}"></script>
 {% endblock implement_js %}
 <!----------------------->
 {% block front_js %}
@@ -268,11 +492,17 @@
 <script src="{{ url_for('static', filename='front/assets/js/components/hs.slick-carousel.js')}}"></script>
 <script src="{{ url_for('static', filename='front/assets/js/components/hs.go-to.js')}}"></script>
 <script src="{{ url_for('static', filename='front/assets/js/components/hs.step-form.js')}}"></script>
+<script src="{{ url_for('static', filename='front/assets/js/components/hs.range-slider.js')}}"></script>
 {% endblock front_js %}
 <!------------------------>
 <!-- JS Plugins Init-->
 {% block init_js %}
 <script>
+
+  $(document).on('ready', function () {
+    // initialization of forms
+    $.HSCore.components.HSRangeSlider.init('.js-range-slider');
+  });
 
   $(document).on('ready', function () {
     // initialization of password strength module
@@ -343,6 +573,17 @@
       // initialization of go to
       $.HSCore.components.HSGoTo.init('.js-go-to');
     });
+
+      $(document).on('ready', function () {
+        // initialization of text animation (typing)
+        var typed = new Typed(".u-text-animation-v2.u-text-animation-v2--typing", {
+          strings: ["Earn your shares.", "Realize your ideas."],
+          typeSpeed: 60,
+          loop: true,
+          backSpeed: 25,
+          backDelay: 1500
+        });
+      });
 
 </script>
 {% endblock init_js %}
